# photoncube2video

./: .gitignore  Cargo.toml  LICENSE  README.md  colorspad_inpaint_mask.npy  photoncube2video.pyi  pyproject.toml
.github/workflows/: CI.yml  build_openssl.sh  build_utils.sh  install_deps.sh  install_openssl.sh
benches/: benchmarks.rs
examples/: preview.py
src/: cli.rs  cube.rs  ffmpeg.rs  io.rs  lib.rs  main.rs  signals.rs  transforms.rs  utils.rs
tests/: test_photoncube.py
