[package]
name = "photoncube2video"
version = "0.3.4"
edition = "2021"

[lib]
name = "photoncube2video"
crate-type = ["cdylib", "lib"]
# See https://github.com/rust-lang/cargo/issues/12260


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
conv = "0.3.3"
ffmpeg-sidecar = "0.5.1"
glob = "0.3.1"
image = "0.24.8"
imageproc = "0.23.0"
indicatif = {version = "*", features = ["rayon"]}
itertools = "0.12.0"
memmap2 = "0.9.4"
natord = "1.0.9"
ndarray = { version = "0.15.6", features = ["rayon", "approx"] }
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
nshare = "0.9.0"
num-traits = "0.2.17"
rayon = "1.8.1"
rusttype = "0.9.3"
tempfile = "3.9.0"

# Pin pyo3 to 0.15.2 as it's the last version to support py36, see: https://github.com/PyO3/maturin/pull/945
pyo3 = { version = "0.15.2", features = ["extension-module", "anyhow", "abi3-py36"] }

numpy = "0.15.1"
strum_macros = "0.26.1"
strum = { version = "0.26.1", features = ["derive"] }
paste = "1.0.14"
fastrand = "2.0.1"

[package.metadata.cargo-machete]
ignored = ["strum"]

[profile.release]
lto = true


[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }


[profile.release-with-debug]
inherits = "release"
debug-assertions = true


[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false

