[package]
name = "photoncube2video"
version = "0.3.9"
edition = "2021"

[lib]
name = "photoncube2video"
crate-type = ["cdylib", "lib"]
# See https://github.com/rust-lang/cargo/issues/12260


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive", "cargo"] }
conv = "0.3.3"
ffmpeg-sidecar = "0.5.1"
glob = "0.3.1"
image = "0.24.9"
imageproc = "0.23.0"
indicatif = {version = "*", features = ["rayon"]}
itertools = "0.13.0"
memmap2 = "0.9.4"
natord = "1.0.9"
ndarray = { version = "0.15.6", features = ["rayon", "approx"] }
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
nshare = "0.9.0"
num-traits = "0.2.19"
rayon = "1.10.0"
rusttype = "0.9.3"
tempfile = "3.10.1"
pyo3 = { version = "0.21.2", features = ["extension-module", "anyhow"] }

numpy = "0.21.0"
strum_macros = "0.26.4"
paste = "1.0.15"
fastrand = "2.1.0"
strum = { version = "0.26.2", features = ["strum_macros"] }

[package.metadata.cargo-machete]
ignored = ["strum"]

[profile.release]
lto = true


[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }


[profile.release-with-debug]
inherits = "release"
debug-assertions = true


[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false

