[package]
name = "photoncube2video"
version = "0.3.11"
edition = "2021"

[lib]
name = "photoncube2video"
crate-type = ["cdylib", "lib"]
# See https://github.com/rust-lang/cargo/issues/12260


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
conv = "0.3.3"
ffmpeg-sidecar = "2.0.0"
glob = "0.3.1"
image = "0.25.4"
imageproc = "0.25.0"
indicatif = {version = "*", features = ["rayon"]}
itertools = "0.13.0"
memmap2 = "0.9.5"
natord = "1.0.9"
ndarray = { version = "0.16.1", features = ["rayon", "approx"] }
ndarray-npy = "0.9.1"
ndarray-stats = "0.6.0"
noisy_float = "0.2.0"
nshare = "0.10.0"
num-traits = "0.2.19"
rayon = "1.10.0"
rusttype = "0.9.3"
tempfile = "3.13.0"
pyo3 = { version = "0.22.5", features = ["extension-module", "anyhow"] }

# Note: We don't depend on openssl directly, but ffmpeg-sidecar does (see: cargo tree -i openssl)
# Here we target the _same_ openssl version, and include the vendored feature as to not rely on
# manually installing openssl on every flavor of manylinux/musllinux
openssl = { version = "0.10.68", features = ["vendored"] }

numpy = "0.22.1"
strum_macros = "0.26.4"
paste = "1.0.15"
fastrand = "2.1.1"
strum = { version = "0.26.3", features = ["strum_macros"] }
ab_glyph = "0.2.29"

[package.metadata.cargo-machete]
ignored = ["strum"]

[profile.release]
lto = true


[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }


[profile.release-with-debug]
inherits = "release"
debug-assertions = true


[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false

