[build-system]
requires = ["maturin>=0.12.2,<2.0"]
build-backend = "maturin"

[project]
name = "photoncube2video"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "typing_extensions",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.scripts]
photoncube2video = "photoncube2video:cli_entrypoint"