[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "photoncube"
description = "Utilities to process and preview single photon data."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["version"]
dependencies = [
    "typing_extensions",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "imageio"
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 121

[project.urls]
"GitHub" = "https://github.com/WISION-Lab/photoncube"

[project.scripts]
photoncube = "photoncube:cli_entrypoint"
pcube = "photoncube:cli_entrypoint"
